--- a/mini_zine.Rmd
+++ b/mini_zine.Rmd
@@ -14,12 +14,6 @@ output:
 
 <!-- Edit your panel content directly in the HTML below. You can use text and <img> tags. -->
 
-```{r read-data,echo=FALSE,results="hide",warning=FALSE,message=FALSE}
-clean_path <- file.path("~/Library/CloudStorage/Box-Box/clients/law_firms/phelps/clean_data/")
-
-model_df <- read.csv(file.path(clean_path, "client_industry_monthly_2020_2025_with_predictors.csv"), 
-                     stringsAsFactors=FALSE)
-```
 
 ```{=html}
 <div id="sheet">
@@ -28,7 +22,7 @@ model_df <- read.csv(file.path(clean_path, "client_industry_monthly_2020_2025_wi
 
     <div class="cell rotated">
       <div class="panel">
-        <h3>GRID Magazine<br>Grooves, Research, Ideas, Data</h3>
+        <h3>Grooves<br>Research<br>Ideas<br>Data</h3>
         <div class="body">&copy; 2025 GRID Magazine</div>
       </div>
     </div>
@@ -36,7 +30,7 @@ model_df <- read.csv(file.path(clean_path, "client_industry_monthly_2020_2025_wi
     <div class="cell rotated">
       <div class="panel">
         <h3>GRID Magazine<br>Issue 1</h3>
-        <div class="body"><br><img src="agnes_martin2.jpg" alt="agnes"      style="width:100%;max-height:3.5in;object-fit:contain;display:block;margin:0.1in auto 0;></div>
+<img src="agnes_martin2.jpg" alt="agnes" style="width:140%;max-height:4in;object-fit:contain;display:block;margin:0.05in auto 0.1;">
         <div class="body"><br>Agnes Martin, Untitled, 1973</div>
 
       </div>
@@ -47,22 +41,22 @@ model_df <- read.csv(file.path(clean_path, "client_industry_monthly_2020_2025_wi
         <h3>What is GRID Magazine?<br>The Light That Shines</h3>
         <div class="body"><br><img src="cover.jpg" alt="cover"></div>
         <div class="body"><strong>GRID </strong> is grooves, research, ideas, data<br>
-        <strong>GRID </strong>is the anti-dystopian's favorite rag<br><strong>GRID </strong>helps navigate a complex modern existence<br><strong>GRID </strong> shares everyday experiences, like great music, to build optimism about the good in the world, and grace in our daily lives</div>
+        <strong>GRID </strong>is the anti-dystopian's favorite rag<br><strong>GRID </strong>to navigate our complex modern existence<br><strong>GRID </strong> to grow your optimism and sense of grace</div>
         </div>
         </div>
 
     <div class="cell rotated">
       <div class="panel">
         <h3>10 Triumphant Songs</h3>
-        <div class="body">Music lets us feel what we might otherwise repress. An oppressive world still delivers emphatic music. These 10 triumphant songs get us through our days with their deep emotion and explosive grooves. Some, like Galaxy Band, smack you over the head instantly. Others, like Isaac Hayes's masterful cover, burn slow for minutes (and minutes) before the horns announce themselves <br><br><br><br> <div class="body" style="text-align:center;">
+        <div class="body">Oppressive worlds inspire triumphant sounds. These 10 songs get us through our days with deep emotion and explosive grooves. Some songs smack instantly, like Galaxy Band. Others burn slow for minutes, and minutes, like Isaac Hayes's masterful cover of Jimmy Webb's song popularized by the Rhinestone Cowboy, Glenn Campbell<br><br><br><br> <div class="body" style="text-align:center;">
   &#x1FAA9;  &#x1FAA9;  &#x1FAA9; <strong>HANDS RAISED</strong> &#x1FAA9;  &#x1FAA9;  &#x1FAA9; <br><br>
 </div> 
         <ol>
         <li>Reggio&mdash;The Light</li>
         <li>Galaxy Band&mdash;Gosh</li>
         <li>Solange&mdash;Losing You</li>
-        <li>John David&mdash;On The Mountain &#9968;</li>
         <li>Bob Dylan&mdash;No Time To Think</li>
+        <li>John David&mdash;On The Mountain &#9968;</li>
         <li>Josette Martial&mdash;Let's Be Winners</li>
         <li>The Temper Trap&mdash;Sweet Disposition</li>
         <li>Jerry Garcia Band&mdash;Rubin and Cherise</li>
@@ -75,32 +69,31 @@ model_df <- read.csv(file.path(clean_path, "client_industry_monthly_2020_2025_wi
     <!-- Bottom row (upright): [Page 4] [Page 5] [Page 6] [Page 7] -->
     <div class="cell">
       <div class="panel">
-        <h3>How Many Times Does Trey Say "Mind"?</h3>
-        <div class="body"><br><img src="phish.jpg" alt="agnes"      style="width:100%;max-height:3.5in;object-fit:contain;display:block;margin:0.1in auto 0.25in;></div>
+        <h3>How Many Times Did Trey Say "Mind"?</h3>
+        <div class="body"><img src="phish.jpg" alt="phish-logo"      style="width:100%;max-height:2.5in;object-fit:contain;display:block;margin:0.1in auto 0.1in;"></div>
         <br>
-        <br>
-        <br>
-        <div class="body">Phish's "What's Going Through Your Mind," which starts with a guitar vamp echoing James Gang's "Walkaway" crunch, includes the chorus: <br><br>To the years we've suffered most<br>From things we've never spoken<br>Still I think you know<br>If looks could kill, we'd both be broken<br>Though after all this time it seems<br>We're not each other's kind<br>Never think that I don't know<br>What's going through your mind<br><br>The word "mind" is repeated 28 times with each chorus, and more once the jam takes flight. In the December 31, 2024 version we count XX total "mind"s </div>
+        <div class="body">Phish's "What's Going Through Your Mind" begins as guitarist Trey Anastasio vamps with a James Gang "Walkaway" crunch. A mesmerizing chorus sings: <br><br>To the years we've suffered most<br>From things we've never spoken<br>Still I think you know<br>If looks could kill, we'd both be broken<br>Though after all this time it seems<br>We're not each other's kind<br>Never think that I don't know<br>What's going through your mind<br><br>The word "mind" repeats 28x per chorus. We count 122 "mind"s in 12/31/2024's techno epic</div>
       </div>
     </div>
 
     <div class="cell">
       <div class="panel">
         <h3>What's Going Through Your Mind</h3>
-        <h1>mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind </h1>
+        <h1>mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind mind </h1>
       </div>
     </div>
 
     <div class="cell">
       <div class="panel">
-        <h3>Page 6</h3>
-        <div class="body">`r model_df$parker_industry[1]`</div>
-      </div>
-    </div>
+        <h3>Inventing the Disco Ball</h3>
+        <div class="body">The patent application for the disco ball, or "myriad reflector," was filed in 1916 by Louis Bernard Woeste of Kentucky. Woeste wrote his invention's aim is "to produce a myriad reflector reflecting surfaces, the same to be arranged in such a manner that the several reflections shall be projected at varying angles, the device itself being arranged so that it may be rotated or otherwise moved so that the reflections may [produce a] spectacular effect." The illustration accompanying Woeste's application is below</div>
+        <div class="body"><br><img src="disco_ball.png" alt="disco"      style="width:60%;max-height:2.5in;object-fit:contain;display:block;margin:0.1in auto 0.1in;"></div>
+        </div>
+        </div>
 
     <div class="cell">
       <div class="panel">
-        <h3>Page 7</h3>
+        <h3></h3>
         <div class="body">Body text</div>
       </div>
     </div>
